# CS431

./: main.cpp
biped-firmware/: README.md
biped-firmware/docs/biped-firmware/general/: biped.md  eclipse.md
biped-firmware/docs/biped-firmware/labs/: lab_1.md  lab_2.md  lab_3.md  lab_4.md  lab_5.md  lab_6.md  lab_7.md  lab_8.md  lab_9.md
biped-firmware/src/biped-firmware/actuator/: actuator.cpp
biped-firmware/src/biped-firmware/common/: parameter.h  type.h
biped-firmware/src/biped-firmware/controller/: controller.cpp  open_loop_controller.cpp  pid_controller.cpp
biped-firmware/src/biped-firmware/main/: main.cpp
biped-firmware/src/biped-firmware/planner/: maneuver_planner.cpp  waypoint_planner.cpp
biped-firmware/src/biped-firmware/platform/: display.cpp  encoder.cpp  imu.cpp  io_expander.cpp  timer.cpp  timer.h
biped-firmware/src/biped-firmware/sensor/: .cproject  sensor.cpp
biped-firmware/src/biped-firmware/task/: interrupt.cpp  task.cpp
biped-ground-station/: .gitignore  README.md
biped-ground-station/configs/biped-ground-station/: Mangosteen.qss
biped-ground-station/src/biped-ground-station/: CMakeLists.txt
biped-ground-station/src/biped-ground-station/common/: global.cpp  global.h  parameter.h
biped-ground-station/src/biped-ground-station/daemon/: camera_daemon.cpp  camera_daemon.h  inbound_daemon.cpp  inbound_daemon.h  joypad_daemon.cpp  joypad_daemon.h  logging_daemon.cpp  logging_daemon.h  outbound_daemon.cpp  outbound_daemon.h
biped-ground-station/src/biped-ground-station/main/: main.cpp
biped-ground-station/src/biped-ground-station/network/: udp.cpp  udp.h
biped-ground-station/src/biped-ground-station/ui/: camera_view.cpp  camera_view.h  confirm_dialog.cpp  confirm_dialog.h  confirm_dialog.ui  joypad.cpp  parameter_dialog.cpp  parameter_dialog.h  parameter_dialog.ui  parameter_set.cpp  parameter_set.h  parameter_set.ui  rolling_plot.cpp  rolling_plot.h  window.cpp  window.h  window.ui
biped-ground-station/src/biped-ground-station/utility/: utility.cpp  utility.h
